--- a/day-12/src/views/form.hbs
+++ b/day-12/src/views/form.hbs
@@ -27,26 +27,29 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+    <script src="../assets/js/auth.js"></script>
   </head>
 
   <body>
     <!-- NAVBAR -->
     <nav
       class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: rgb(0, 0, 0)"
+      style="background-color: black"
     >
-      <div class="container">
+      <div class="container d-flex align-items-center">
+        <!-- Brand -->
         <a class="navbar-brand" href="#">Test Navbar</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="my-projects">My Project</a>
-            </li>
-          </ul>
-          <a href="contact" class="btn btn-light d-flex">Contact me</a>
+
+        <!-- Menu items beside the brand -->
+        <div class="navbar-nav d-flex ms-3">
+          <a class="nav-link active me-3" href="home">Home</a>
+          <a class="nav-link me-3" href="my-projects">My Project</a>
+          <a class="nav-link" href="contact">Contact me</a>
+        </div>
+
+        <!-- Push logout button to the right -->
+        <div class="ms-auto text-white">
+          <a href="login" id="logOut" class="btn btn-light">Log Out</a>
         </div>
       </div>
     </nav>
@@ -106,5 +109,8 @@
       </form>
     </section>
     <!-- CARD -->
+    <!-- Javascript -->
+    <script src="../assets/js/logout.js"></script>
+    <!-- Javascript -->
   </body>
 </html>
