--- a/day-12/src/views/my-projects.hbs
+++ b/day-12/src/views/my-projects.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,26 +27,29 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+    <script src="../assets/js/auth.js"></script>
   </head>
 
   <body>
     <!-- NAVBAR -->
     <nav
       class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: rgb(0, 0, 0)"
+      style="background-color: black"
     >
-      <div class="container">
+      <div class="container d-flex align-items-center">
+        <!-- Brand -->
         <a class="navbar-brand" href="#">Test Navbar</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="my-projects">My Project</a>
-            </li>
-          </ul>
-          <a href="contact" class="btn btn-light d-flex">Contact me</a>
+
+        <!-- Menu items beside the brand -->
+        <div class="navbar-nav d-flex ms-3">
+          <a class="nav-link active me-3" href="home">Home</a>
+          <a class="nav-link me-3" href="my-projects">My Project</a>
+          <a class="nav-link" href="contact">Contact me</a>
+        </div>
+
+        <!-- Push logout button to the right -->
+        <div class="ms-auto text-white">
+          <a href="login" id="logOut" class="btn btn-light">Log Out</a>
         </div>
       </div>
     </nav>
@@ -98,9 +100,7 @@
           </div>
         </div>
         <div class="mb-3">
-          <label for="formLanguage" class="form-label"
-            >Bahasa Pemrograman</label
-          >
+          <label for="formLanguage" class="form-label">Bahasa Pemrograman</label>
           <select id="formLanguage" class="form-select" required>
             <option disabled selected>
               Pilih Bahasa Pemrograman yang dipakai
@@ -112,9 +112,7 @@
           </select>
         </div>
         <div class="mb-3">
-          <label for="formDescription" class="form-label"
-            >Deskripsi Project</label
-          >
+          <label for="formDescription" class="form-label">Deskripsi Project</label>
           <textarea
             type="text"
             id="formDescription"
@@ -151,7 +149,10 @@
         </p>
       </div>
       <div>
-        <div id="contents" class="d-flex flex-wrap justify-content-center gap-4">
+        <div
+          id="contents"
+          class="d-flex flex-wrap justify-content-center gap-4"
+        >
           <!-- ISI LIST FORM DARI JAVASCRIPT -->
         </div>
       </div>
@@ -160,6 +161,7 @@
 
     <!-- Javascript -->
     <script src="../assets/js/index.js"></script>
+    <script src="../assets/js/logout.js"></script>
     <!-- Javascript -->
   </body>
 </html>
